--- a/resources/style.css
+++ b/resources/style.css
@@ -1,3 +1,4 @@
+/* Body Content */
 body {
   font-family: Helvetica;
   font-size: 22px;
@@ -5,4 +6,18 @@ body {
   background-color: black;
   opacity: 0.9;
   text-align center;
+}
+
+/*
+header {
+  display: flex;
+  position: fixed;
+  width: 100%;
+  height: 69px;
+
+}
+
+.logo {
+  display: flex;
+  height: 50px;
 }
