--- a/resources/style.css
+++ b/resources/style.css
@@ -98,3 +98,41 @@ nav a {
   height: 200px;
   margin: 10px;
 }
+
+/* Location Content */
+.main-location {
+  height: 500px;
+  padding-top: 70px;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg")
+}
+
+.location-content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding-top: 5px;
+  margin: auto;
+  width: 1100px;
+}
+
+.squares {
+  opacity: 1;
+  background-color: black;
+  flex-basis: 280px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px;
+  margin: 5px 20px;
+}
+
+/* Footer */
+footer {
+  text-align: center;
+  height: 200px;
+}
+
+.copyright {
+  text-align: left;
+}
